[package]
name = "bitfont"
version = "0.1.0"
authors = ["David Griffith <dgriffith@internode.on.net>"]
description = "Takes an ASCII string and generates a vector containing a bitmap font, for easy overlay into images."
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["bitmap","font", "text"]

[badges]
travis-ci = { repository = "david-griffith/rust-bitmap" }

[dependencies]
